# dfdx_gpt2

./: Cargo.toml  README.md
src/: embeddings.rs  gpt2.rs  lib.rs  simple.rs
